# helix_ir

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: ddl_compilation.py  inference.py
docs/: concepts.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: cli.rst  ddl.rst  diff.rst  infer.rst  lineage.rst  normalize.rst  pii.rst  schema.rst  sources.rst  test.rst  transform.rst  types.rst
src/helix_ir/: __init__.py  cli.py  exceptions.py
src/helix_ir/ddl/: __init__.py  compile.py
src/helix_ir/ddl/dialects/: __init__.py  base.py  bigquery.py  databricks.py  duckdb.py  postgres.py  redshift.py  snowflake.py
src/helix_ir/diff/: __init__.py  classifier.py
src/helix_ir/infer/: __init__.py  confidence.py  merger.py  sampler.py  walker.py
src/helix_ir/lineage/: __init__.py  graph.py
src/helix_ir/normalize/: __init__.py  decomposer.py  plan.py  polymorphic.py  strategies.py
src/helix_ir/pii/: __init__.py  classifier.py  heuristics.py
src/helix_ir/pii/regex_patterns/: __init__.py  common.py  europe.py  india.py  usa.py
src/helix_ir/schema/: __init__.py  path.py  schema.py  serialization.py
src/helix_ir/sources/: __init__.py  base.py  json_source.py  kafka_source.py  mongo_source.py  parquet_source.py  postgres_source.py  rest_source.py
src/helix_ir/test/: __init__.py  generator.py
src/helix_ir/transform/: __init__.py  expression.py  functions.py  operators.py  table.py
src/helix_ir/transform/compiler/: __init__.py  logical.py  (+1 more)
src/helix_ir/types/: __init__.py  arrow_interop.py  core.py  lattice.py  semantic.py
tests/: conftest.py
tests/fixtures/: sample_docs.py
tests/unit/: test_ddl.py  test_diff.py  test_infer.py  test_normalize.py  test_pii.py  test_schema.py  test_types.py
(+8 files in other folders)
