[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helix-ir"
version = "0.1.0"
description = "Comprehensive open-source Python library for schema inference, normalization, transformation, and DDL generation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sparsh Jain", email = "sparsh@example.com" }
]
keywords = ["schema", "inference", "normalization", "ddl", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.0"]
postgres = ["psycopg[binary]>=3.0"]
kafka = ["confluent-kafka>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
helix-ir = "helix_ir.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/helix_ir"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
